🩹 Fix: copyright notice and go-to-top button overlapped on some mobile devices

--- a/assets/stylesheets/footer.scss
+++ b/assets/stylesheets/footer.scss
@@ -20,7 +20,7 @@ footer {
 
 	a {
 		float: right;
-		margin-top: -62px;
+		margin-top: -22px;
 		margin-right: 26px;
 		text-decoration: none;
 		color: $bg-primary;
