--- a/assets/stylesheets/variables/_dimension.scss
+++ b/assets/stylesheets/variables/_dimension.scss
@@ -1,3 +1,3 @@
 $header-height: 74px;
 
-$footer-height: 128px;
+$footer-height: 154px;
